--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.4.2",
     "styled-normalize": "^8.0.0"
   },
@@ -26,6 +28,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.0",
-    "prettier": "^1.14.2"
+    "moxios": "^0.4.0",
+    "prettier": "^1.14.2",
+    "redux-mock-store": "^1.5.3"
   }
 }
